# clither

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.nvim/: nvim-dap.lua
.nvim/luasnippets/: snippets.lua
benchmarks/: benchmarks.cpp
benchmarks/clither/: bench_hashmap.cpp
benchmarks/cstructures/: bench_hashmap.cpp  bench_vector.cpp
cstructures/: CMakeLists.txt
cstructures/include/cstructures/: backtrace.h  btree.h  hashmap.h  init.h  memory.h  rb.h  string.h  vector.h
cstructures/src/: btree.c  hash.c  hashmap.c  init.c  memory.c  rb.c  string.c  vector.c
cstructures/src/platform/win32/: backtrace_win32.c
cstructures/templates/: config.h.in
doc/clither-doc/: .gitignore  CMakeLists.txt  clither-doc.tex
doc/clither-doc/bib/: bibliography.bib
doc/clither-doc/images/: msg-feedback.tex  msg-join-accept.tex  msg-join-request.tex  msg-snake-bezier.tex  msg-snake-username.tex  seq-feedback.tex  seq-join.tex  seq-snake-create.tex  seq-snake-destroy.tex  seq-snake-update.tex
doc/clither-doc/preamble/: packages.tex  title.tex
doc/clither-doc/sections/: bezier.tex  protocol-feedback.tex  protocol-joining.tex  protocol-snake.tex  protocol.tex
doc/clither-doc/title/: titlepage.tex
include/clither/: args.h  backtrace.h  benchmarks.h  bezier.h  bezier_handle_rb.h  bezier_pending_acks_bset.h  bezier_point_vec.h  bmap.h  bset.h  btree.h  camera.h  client.h  cmd.h  cmd_queue.h  cmd_rb.h  command.h  controls.h  event.h  food_cluster.h  fs.h  gfx.h  hash.h  hm.h  input.h  log.h  mcd_wifi.h  mem.h  mfile.h  msg.h  msg_queue.h  msg_vec.h  mutex.h  net.h  net_addr_hm.h  popcount.h  protocol.h  proximity_state.h  proximity_state_bmap.h  q.h  q15.1.h  (+34 more)
mlab/: aabb.m  bezier_fit.m  bezier_fit2.m  bezier_fit3.m  bezier_fit4.m  bezier_move.m  lsq.m  rollback.m  rollback2.m  test.m
scripts/: valgrind-host.sh
src/: args.c  backtrace_linux.c  bezier.c  bezier_handle_rb.c  bezier_pending_acks_bset.c  bezier_point_vec.c  camera.c  client.c  cmd.c  cmd_queue.c  cmd_rb.c  command.c  controls.c  event.c  food_cluster.c  fs_linux.c  fs_posix.c  fs_win32.c  gfx.c  gfx_sdl.c  hash.c  input.c  log.c  main.c  mcd_wifi.c  mem.c  mfile_posix.c  mfile_win32.c  msg.c  msg_queue.c  msg_vec.c  mutex_pthread.c  mutex_win32.c  net.c  net_addr_hm.c  net_em.c  net_posix.c  net_win32.c  protocol.c  proximity_state.c  (+38 more)
src/gles2/: gfx_gles2.c
src/gles2/glad/include/glad/: gles2.h
src/sdl/: gfx_sdl.c
src/vulkan/: gfx_vulkan.c
templates/: config.h.in
tests/: tests.cpp
tests/clither/: test_args.cpp  test_bezier.cpp  test_bezier_aabb.cpp  test_bezier_fit.cpp  test_bezier_point.cpp  test_bmap.cpp  test_bset.cpp  test_btree.cpp  test_cmd.cpp  test_command.cpp  test_hm.cpp  test_hm_full.cpp  test_mem.cpp  test_msg.cpp  test_protocol.cpp  test_protocol_feedback.cpp  test_protocol_join.cpp  test_q.cpp  test_rb.cpp  test_snake.cpp  test_tick.cpp  test_vec.cpp  test_wrap.cpp
tests/cstructures/: test_btree.cpp  test_btree_as_set.cpp  test_hashmap.cpp  test_memory.cpp  test_rb.cpp  test_vector.cpp
tests/src/: test_args.cpp
